# MPD

./: .gitignore  README.md  install.sh  uninstall.sh
documentation/: Doxyfile
documentation/html/: adapt_cube_8h.html  adapt_cube_8h__dep__incl.map  adapt_cube_8h__dep__incl.md5  adapt_cube_8h__incl.map  adapt_cube_8h__incl.md5  adapt_cube_8h_source.html  annotated.html  classes.html  dir_c8a56f06750b4d2825db46cb1a5be2b9.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group___c_o_m_m_o_n___f_u_n_c_t_i_o_n_s.html  group___o_r_b___c_s_t.html  index.html  load_chemistry_8c.html  load_chemistry_8c__incl.map  load_chemistry_8c__incl.md5  load_chemistry_8h.html  load_chemistry_8h__dep__incl.map  load_chemistry_8h__dep__incl.md5  load_chemistry_8h__incl.map  load_chemistry_8h__incl.md5  load_chemistry_8h_source.html  load_parameters_8h.html  load_parameters_8h__dep__incl.map  load_parameters_8h__dep__incl.md5  load_parameters_8h__incl.map  load_parameters_8h__incl.md5  load_parameters_8h_source.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  main_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  main_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  main_8c_a33ec31f6556625304c02ef17911e34b7_cgraph.map  (+56 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  (+28 more)
inputFiles/: HHeH-Tri-ROHF.wfn  HHeH-Tri-UHF-def2tzvppd.box.mesh  HHeH-Tri-UHF-def2tzvppd.wfn  HHeH-Tri-UHF-def2tzvppd0.ini.mesh  HHeH-Tri-UHF.wfn  beh2-Be_plus_H2-rhf.wfn  beh2-coudee-rhf.wfn  beh2-def2tzvp-rhf.wfn  beh2-lineaire-rhf.wfn  bh-def2tzvp-uhf.wfn  c2h2pse.box.mesh  c2h2pse.ini.mesh  c2h2pse.wfn  c2h2pse0.ini.mesh  c2h4-def2tzvp.wfn  c2h6-MOs.wfn  c8h18-MOs.wfn  c8h18-NLMOs.wfn  c8h18-boys.wfn  c8h18-combo.wfn  exHfHex.info  exHfTet.info  f3m-rhf-def2tzvppd.wfn  fhfm-rhf-def2tzvppd.wfn  h2o-def2tzvp-rhf.wfn  h3m-def2tzvppd.ini.mesh  h3m-def2tzvppd.wfn  hf-dz.wfn  hf-pseudo.wfn  hf-tz.box.mesh  hf-tz.multidet.chem  hf-tz.multidet.input  li3m-alle.wfn  li3m-pseudo.wfn  lih-def2tzvp-rhf.wfn  lihhhlip-def2tzvppd.wfn  moh-uhf.wfn  moh-uhfOriginal.wfn  moh.wfn  mohOriginal.wfn  (+5 more)
mmg3d5modified/src/common/: libmmgtypesf.h
mmg3d5modified/src/mmg2d/: libmmg2df.h
mmg3d5modified/src/mmg3d/: isosiz_3d.c  mmg3d1.c  mmg3d1_delone.c  mmg3d1_pattern.c  swap_3d.c  swapgen_3d.c
mmg3d5modified/src/mmgs/: libmmgsf.h
sources/: adaptMesh.c  adaptMesh.h  loadChemistry.h  loadMesh.c  loadParameters.c  loadParameters.h  main.c  main.h  optimization.c  optimization.h  shapeDerivative.c
sources/advection/: CMakeLists.txt
sources/commons/: CMakeLists.txt
sources/elasticity/: CMakeLists.txt
sources/medit/: CMakeLists.txt
sources/medit/sources/: compil.date
sources/mmg3d/: CMakeLists.txt  PatchInstall.CMakeLists.txt
sources/mmg3d/sources/common/: hash.c  mmgcommon.h
sources/mmg3d/sources/mmg3d/: libmmg3d.c  libmmg3d.h  mmg3d.c  mmg3d2.c  mmg3d3.c  split_3d.c  velextls_3d.c
sources/mmg3d/sources/srcNew/common/: libmmgtypes.h
sources/mmg3d/sources/srcNew/mmg3d/: isosiz_3d.c  mmg3d.c  mmg3d2.c  swap_3d.c
sources/mmg3d/sources/srcSaveOk/common/: hash.c  libmmgtypes.h  mmgcommon.h
sources/mmg3d/sources/srcSaveOk/mmg3d/: libmmg3df.h  mmg3d1.c  mmg3d1_delone.c  mmg3d1_pattern.c  mmg3d3.c  split_3d.c  swapgen_3d.c
sources/mpd/: CMakeLists.txt  FindLAPACKE.cmake
sources/mpd/documentation/: Doxyfile
sources/mpd/sources/: adaptMesh.c  computeData.c  computeData.h  loadChemistry.c  loadChemistry.h  loadMesh.c  loadMesh.h  loadParameters.c  loadParameters.h  main.c  main.h  optimization.c  optimization.h  test.c  test.h  testComputeData.c  testLoadChemistry.c  testLoadMesh.c  testLoadParameters.c  testOptimization.c
sources/mpd/sources/sourcesDevelopment/: adaptMesh.c  adaptMesh.h  loadChemistry.c  loadParameters.c  main.c  main.h  optimization.h
sources/mpdToolbox/: readme.txt
sources/mpdToolbox/AdaptTools/sources/commonFiles/: compil.date
sources/mpdToolbox/buildBoundedDomain/: buildBoundedDomain.c  example.cube  example.sol  readme.txt
sources/mpdToolbox/buildLevelSetOfHalfSpace/: buildLevelSetOfHalfSpace  buildLevelSetOfHalfSpace.c  example.mesh  example.sol  readme.txt
sources/mpdToolbox/cubeToMesh/: cubeToMesh.c  readme.txt
sources/mpdToolbox/doubleSphere/: doubleSphere  doubleSphere.c  example.mesh  example.sol  exampleAdapted.sol  metric.sol  readme.txt
sources/mpdToolbox/getIntersection/: example.ini.sol  example.out.sol  example.sol  getIntersection  getIntersection.c  metric.sol  readme.txt  valence1.sol  valence12.mesh  valence12.sol  valence2.sol
sources/mpdToolbox/hexaToTetra/: hexaToTetra.c  readme.txt
sources/mpdToolbox/labelInverter/: labelInverter.c  readme.txt
sources/mpdToolbox/meshToCube/: meshToCube.c  readme.txt  tetraToHexa.ini.cube  tetraToHexa.ini.wfn  tetraToHexa.out.cube  tetraToHexa.out.mesh  tetraToHexa.out.sol  tetraToHexa.temp.sol
sources/mpdToolbox/meshToObj/: meshToObj  meshToObj.c  readme.txt
sources/mpdToolbox/objMerge/: example.cube  objMerge.c  readme.txt
sources/mpdToolbox/refineCubeMesh/: readme.txt  refineCubeMesh.c
sources/mpdToolbox/resizeObjFile/: example.cube  readme.txt  resizeObjFile  resizeObjFile.c
sources/mpdToolbox/shapeExtractor/: example.out.mesh  readme.txt  shapeExtractor.c
sources/mpdToolbox/vectorFieldNormAtVertices/: example.ini.sol  example.out.sol  readme.txt  vectorFieldNormAtVertices.c
sources/mshdistance/: CMakeLists.txt
